--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -11,15 +11,16 @@
     padding: 25px;
   }
 
-  .options{
+  .options {
     width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
-    .option{
+    .option {
       padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
