--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -4,9 +4,9 @@
   flex: 1 1 auto;
   display: flex;
   align-items: center;
+  justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  justify-content: center;
   overflow: hidden;
 
   &:hover {
@@ -37,8 +37,8 @@
   .background-image {
     width: 100%;
     height: 100%;
-    background-position: center;
     background-size: cover;
+    background-position: center;
   }
 
   .content {
@@ -55,7 +55,7 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
